# jsonriver-py

./: .gitignore  MANIFEST.in  PUBLISHING.md  PUBLISH_SUCCESS.md  README.md  README_JSONRIVER.md  RELEASE_INSTRUCTIONS.md  VALIDATION_REPORT.md  example.py  example_entities.py  example_jsonriver.py  gemini_stream.py  package-lock.json  package.json  pyproject.toml  test.py  test_bridge.mjs  test_langchain_stream.py  test_openai_stream.py
.github/workflows/: test.yml  workflow.yml
bench/: README.md  python-bench.py  streaming-bench.py
src/jsonriver/: __init__.py  parse.py  tokenize.py
tests/: test_parse.py  test_tokenize.py  utils.py
