[project]
name = "jsonriver"
version = "1.0.0"
description = "A JSON parser that produces increasingly complete versions of the parsed value"
authors = [
    {name = "Chris (Python port)", email = ""}
]
license = {text = "BSD-3-Clause"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "mypy>=1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
